; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/usbvision/extr_usbvision-video.c_vidioc_s_input.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/usbvision/extr_usbvision-video.c_vidioc_s_input.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i32 }
%struct.usb_usbvision = type { i32, i32, i32 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, i8*, i32)* @vidioc_s_input to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vidioc_s_input(%struct.file* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.file*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.usb_usbvision*, align 8
  store %struct.file* %0, %struct.file** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load %struct.file*, %struct.file** %5, align 8
  %10 = call %struct.usb_usbvision* @video_drvdata(%struct.file* %9)
  store %struct.usb_usbvision* %10, %struct.usb_usbvision** %8, align 8
  %11 = load i32, i32* %7, align 4
  %12 = load %struct.usb_usbvision*, %struct.usb_usbvision** %8, align 8
  %13 = getelementptr inbounds %struct.usb_usbvision, %struct.usb_usbvision* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = icmp uge i32 %11, %14
  br i1 %15, label %16, label %19

16:                                               ; preds = %3
  %17 = load i32, i32* @EINVAL, align 4
  %18 = sub nsw i32 0, %17
  store i32 %18, i32* %4, align 4
  br label %33

19:                                               ; preds = %3
  %20 = load %struct.usb_usbvision*, %struct.usb_usbvision** %8, align 8
  %21 = load i32, i32* %7, align 4
  %22 = call i32 @usbvision_muxsel(%struct.usb_usbvision* %20, i32 %21)
  %23 = load %struct.usb_usbvision*, %struct.usb_usbvision** %8, align 8
  %24 = call i32 @usbvision_set_input(%struct.usb_usbvision* %23)
  %25 = load %struct.usb_usbvision*, %struct.usb_usbvision** %8, align 8
  %26 = load %struct.usb_usbvision*, %struct.usb_usbvision** %8, align 8
  %27 = getelementptr inbounds %struct.usb_usbvision, %struct.usb_usbvision* %26, i32 0, i32 2
  %28 = load i32, i32* %27, align 4
  %29 = load %struct.usb_usbvision*, %struct.usb_usbvision** %8, align 8
  %30 = getelementptr inbounds %struct.usb_usbvision, %struct.usb_usbvision* %29, i32 0, i32 1
  %31 = load i32, i32* %30, align 4
  %32 = call i32 @usbvision_set_output(%struct.usb_usbvision* %25, i32 %28, i32 %31)
  store i32 0, i32* %4, align 4
  br label %33

33:                                               ; preds = %19, %16
  %34 = load i32, i32* %4, align 4
  ret i32 %34
}

declare dso_local %struct.usb_usbvision* @video_drvdata(%struct.file*) #1

declare dso_local i32 @usbvision_muxsel(%struct.usb_usbvision*, i32) #1

declare dso_local i32 @usbvision_set_input(%struct.usb_usbvision*) #1

declare dso_local i32 @usbvision_set_output(%struct.usb_usbvision*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
